Lock the current updateBalance results before refactoring.
Co-authored-by: Cursor <cursoragent@cursor.com>